--- a/symbols.tex
+++ b/symbols.tex
@@ -25,45 +25,46 @@
 \nomenclature[25]{$\psi_u(s)$}{Phase advance from the start of the ring, $s_0$, where $u=(x,y)$.} 
 \nomenclature[26]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$.} 
 \nomenclature[27]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Alpha, beta and gamma functions respectively or Twiss or Courant-Snyder parameters, with $u=(x,y,z)$.} 
-\nomenclature[28]{$Q_x$, $Q_y$}{Horizontal and vertical betatron tunes.}
-\nomenclature[29]{$Q_{x0}$, $Q_{y0}$}{Horizontal and vertical working points of an accelerator.} 
-\nomenclature[30]{$J_x$, $J_y$}{Horizontal and vertical action.} 
-\nomenclature[31]{$u_N$, $u^\prime_N$}{Normalised transverse co-ordinates, with $u=(x,y)$.} 
-\nomenclature[32]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance of the beam.} 
-\nomenclature[33]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance of the beam.} 
-\nomenclature[34]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.} 
-\nomenclature[35]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of nth order.} 
-\nomenclature[36]{$Q_x^{\prime}$, $Q_x^{\prime \prime}$}{Horizontal chromaticity first and second order respectively.} 
-\nomenclature[37]{$Q_y^{\prime}$, $Q_y^{\prime \prime}$}{Vertical chromaticity first and second order respectively.} 
-\nomenclature[38]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical and cross-term detuning coefficients respectively in units of [1/m].} 
-\nomenclature[39]{$T_\mathrm{rev}$}{Revolution period of an accelerator.}
-\nomenclature[40]{$\phi_\mathrm{RF}$}{The phase of the main RF system of an accelerator.}
-\nomenclature[41]{$\omega_\mathrm{RF}$}{The angular frequency of the main RF system of an accelerator.}
-\nomenclature[42]{$h$}{Harmonic number.}
-\nomenclature[43]{$\phi_s$}{The phase of the synchronous particle.}
-\nomenclature[44]{$V_\mathrm{RF}$, $f_\mathrm{RF}$}{Voltage and frequency of the main RF system of an accelerator.}
-\nomenclature[45]{$\alpha_p$}{Momentum compaction factor.}
-\nomenclature[46]{$\eta_p$}{Phase slip factor.}
-\nomenclature[47]{$\gamma_\mathrm{tr}$}{Transition energy.}
-\nomenclature[48]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
-\nomenclature[49]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wake functions.}
-\nomenclature[50]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wake functions.}
-\nomenclature[50]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wake functions.}
-\nomenclature[51]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
-\nomenclature[52]{$\Delta \Omega_u ^{(l)} $}{Horizontal and vertical complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$.}
-\nomenclature[53]{$i$}{Imaginary unit.}
-\nomenclature[54]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
-\nomenclature[55]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
-\nomenclature[56]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
-\nomenclature[57]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
-\nomenclature[58]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
-\nomenclature[59]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
-\nomenclature[60]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
-\nomenclature[61]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
-\nomenclature[62]{$I_n(x)$}{Modified Bessel function of the first kind.}
-\nomenclature[63]{$\Gamma$}{Gamma function.}
-\nomenclature[64]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[65]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[66]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
-\nomenclature[67]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
-\nomenclature[68]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
+\nomenclature[28]{$D_x(s), D_y(s)$}{Horizontal and vertical dispersion functions, respectively.} 
+\nomenclature[29]{$Q_x$, $Q_y$}{Horizontal and vertical betatron tunes.}
+\nomenclature[30]{$Q_{x0}$, $Q_{y0}$}{Horizontal and vertical working points of an accelerator.} 
+\nomenclature[31]{$J_x$, $J_y$}{Horizontal and vertical action.} 
+\nomenclature[32]{$u_N$, $u^\prime_N$}{Normalised transverse co-ordinates, with $u=(x,y)$.} 
+\nomenclature[33]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance of the beam.} 
+\nomenclature[34]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance of the beam.} 
+\nomenclature[35]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.} 
+\nomenclature[36]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of nth order.} 
+\nomenclature[37]{$Q_x^{\prime}$, $Q_x^{\prime \prime}$}{Horizontal chromaticity first and second order respectively.} 
+\nomenclature[38]{$Q_y^{\prime}$, $Q_y^{\prime \prime}$}{Vertical chromaticity first and second order respectively.} 
+\nomenclature[39]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical and cross-term detuning coefficients respectively in units of [1/m].} 
+\nomenclature[40]{$T_\mathrm{rev}$}{Revolution period of an accelerator.}
+\nomenclature[41]{$\phi_\mathrm{RF}$}{The phase of the main RF system of an accelerator.}
+\nomenclature[42]{$\omega_\mathrm{RF}$}{The angular frequency of the main RF system of an accelerator.}
+\nomenclature[43]{$h$}{Harmonic number.}
+\nomenclature[44]{$\phi_s$}{The phase of the synchronous particle.}
+\nomenclature[45]{$V_\mathrm{RF}$, $f_\mathrm{RF}$}{Voltage and frequency of the main RF system of an accelerator.}
+\nomenclature[46]{$\alpha_p$}{Momentum compaction factor.}
+\nomenclature[47]{$\eta_p$}{Phase slip factor.}
+\nomenclature[48]{$\gamma_\mathrm{tr}$}{Transition energy.}
+\nomenclature[49]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
+\nomenclature[50]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wake functions.}
+\nomenclature[51]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wake functions.}
+\nomenclature[52]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wake functions.}
+\nomenclature[53]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
+\nomenclature[54]{$\Delta \Omega_u ^{(l)} $}{Horizontal and vertical complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$.}
+\nomenclature[55]{$i$}{Imaginary unit.}
+\nomenclature[56]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
+\nomenclature[57]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
+\nomenclature[58]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
+\nomenclature[59]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
+\nomenclature[60]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
+\nomenclature[61]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
+\nomenclature[62]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
+\nomenclature[63]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
+\nomenclature[64]{$I_n(x)$}{Modified Bessel function of the first kind.}
+\nomenclature[65]{$\Gamma$}{Gamma function.}
+\nomenclature[66]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[67]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[68]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
+\nomenclature[69]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
+\nomenclature[70]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
