--- a/symbols.tex
+++ b/symbols.tex
@@ -51,20 +51,24 @@
 \nomenclature[51]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wake functions.}
 \nomenclature[52]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wake functions.}
 \nomenclature[53]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
-\nomenclature[54]{$\Delta \Omega_u ^{(l)} $}{Horizontal and vertical complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$.}
-\nomenclature[55]{$i$}{Imaginary unit.}
-\nomenclature[56]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
-\nomenclature[57]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
-\nomenclature[58]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
-\nomenclature[59]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
-\nomenclature[60]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
-\nomenclature[61]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
-\nomenclature[62]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
-\nomenclature[63]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
-\nomenclature[64]{$I_n(x)$}{Modified Bessel function of the first kind.}
-\nomenclature[65]{$\Gamma$}{Gamma function.}
-\nomenclature[66]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[67]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[68]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
-\nomenclature[69]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
-\nomenclature[70]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
+\nomenclature[54]{$ \Omega_u ^{(l)} $}{Complex or real valued? coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively. \textcolor{red}{to be cheked again.}}
+\nomenclature[55]{$\Delta \Omega_u ^{(l)} $}{Complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
+\nomenclature[56]{$\Delta \Omega_{u, \mathrm{re}} ^{(l)}, \Delta \Omega_{u, \mathrm{im}} ^{(l)} $}{Real and imaginary part of the complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
+\nomenclature[57]{$\Delta Q_u ^{(l)} $}{Coherent freequency shift in tune units, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.\textcolor{red}{to be cheked again.}}
+\nomenclature[58]{$\Delta Q_x ^\mathrm{rms},  \Delta Q_y ^\mathrm{rms} $}{Horizontal and vertical rms betatron tune spread.}
+\nomenclature[59]{$i$}{Imaginary unit.}
+\nomenclature[60]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
+\nomenclature[61]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
+\nomenclature[62]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
+\nomenclature[63]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
+\nomenclature[64]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
+\nomenclature[65]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
+\nomenclature[66]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
+\nomenclature[67]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
+\nomenclature[68]{$I_n(x)$}{Modified Bessel function of the first kind.}
+\nomenclature[69]{$\Gamma$}{Gamma function.}
+\nomenclature[70]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[71]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[72]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
+\nomenclature[73]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
+\nomenclature[74]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
