--- a/main.tex
+++ b/main.tex
@@ -135,7 +135,7 @@
 \chapter{Simulation studies: Emittance growth suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
-\chapter{Experimental studies from 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
+\chapter{Experimental studies from 2022: investigation of the effect of impedance on noise induced emittance growth}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
 \chapter{Conclusions}\label{Ch:conclusions}
