--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,53 @@
       doi           = "10.5170/CERN-2004-003-V-1",
 }
 
+@article{ATLAS:2008xda,
+    author = "Aad, G. and others",
+    collaboration = "ATLAS",
+    title = "{The ATLAS Experiment at the CERN Large Hadron Collider}",
+    doi = "10.1088/1748-0221/3/08/S08003",
+    journal = "JINST",
+    volume = "3",
+    pages = "S08003",
+    year = "2008"
+}
+
+@article{CMS:2008xjf,
+    author = "Chatrchyan, S. and others",
+    collaboration = "CMS",
+    title = "{The CMS Experiment at the CERN LHC}",
+    doi = "10.1088/1748-0221/3/08/S08004",
+    journal = "JINST",
+    volume = "3",
+    pages = "S08004",
+    year = "2008"
+}
+
+@article{ALICE:2008ngc,
+    author = "Aamodt, K. and others",
+    collaboration = "ALICE",
+    title = "{The ALICE experiment at the CERN LHC}",
+    doi = "10.1088/1748-0221/3/08/S08002",
+    journal = "JINST",
+    volume = "3",
+    pages = "S08002",
+    year = "2008"
+}
+
+@article{Alves:1129809,
+      author        = "Alves, A Augusto and others",
+      title         = "{The LHCb Detector at the LHC}",
+      journal       = "JINST",
+      collaboration = "LHCb Collaboration",
+      reportNumber  = "LHCb-DP-2008-001",
+      volume        = "3",
+      pages         = "S08005",
+      year          = "2008",
+      url           = "https://cds.cern.ch/record/1129809",
+      note          = "Also published by CERN Geneva in 2010",
+      doi           = "10.1088/1748-0221/3/08/S08005",
+}
+
 @article{ATLAS_Higgs,
       author        = "ATLAS collaboration",
       title         = {Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
@@ -34,6 +81,15 @@
 }
 
 
+@article{Lopienska:2800984,
+      author        = "Lopienska, Ewa",
+      title         = "{The CERN accelerator complex, layout in 2022. Complexe
+                       des accélérateurs du CERN en janvier 2022}",
+      year          = "2022",
+      url           = "https://cds.cern.ch/record/2800984",
+      note          = "General Photo",
+}
+
 @misc{HL_LHC_yellow_report,
   doi = {10.23731/CYRM-2020-0010},
   url = {https://e-publishing.cern.ch/index.php/CYRM/issue/view/127},
@@ -44,6 +100,8 @@
   year = {2020},
   copyright = {Creative Commons Attribution 4.0 International}
 }
+
+
 
 @book{Brning2015,
   doi = {10.1142/9581},
