some updates on appendix on headtail motnitor

--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -1,9 +1,9 @@
-The SPS is equipped with a high bandwidth pick-up of approximately 2\,GHz allowing to resolve the intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the measurement of the $\CC$ voltage. Therefore its use as a crabbing diagnostic should be explained here. The methods and procedures described in this section were developed at CERN and they are described here for the completeness of the thesis.
+The SPS is equipped with a high bandwidth pick-up of approximately 2\,GHz allowing to resolve the intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Therefore its use as a crabbing diagnostic should be explained here. The methods and procedures described in this section were developed at CERN and they are described here for the completeness of the thesis.
 
 In the first part of this section some general information on the instrument along with example signals will be presented. Subsequently, the post processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset infuced by the CC kick. The experimental data presented in this section were acquired, on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that the particle at the center of the bunch doesn't recieve any transverse deflection) for simplicity. That energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
 
 \section{General information}\label{subsec:HT_general_info}
-As already mentioned, the Head-Tail monitor~\cite{sps_headtail_monitor} is a high bandwidth version of a standard beam position monitor, which means that it can measure the transverse displacement within the bunch. For reference it has a resolution of 100\,ps while the length of the bunches is $4\sigma_t \sim $2\,ns~\cite{Carver:2696108}.  This makes it ideal for the measurement of the intra-bunch offset caused from the $\CC$ kick. Its reading consists of the sum ($\Sigma$) and the  difference ($\Delta$) of the electrode signals of a straight stripline coupler (Fig.~\ref{fig:SPS_HT_diagram})~\cite{Jones:987561, Levens:2313358} over a defined acquisition period. The sum signal is the longitudinal line density while the difference signal corresponds to the intra-bunch offset. The system operates on timescales such that the signals are given as a function of the position within the bunch.
+As already mentioned, the Head-Tail monitor~\cite{sps_headtail_monitor} is a high bandwidth version of a standard beam position monitor, which means that it can measure the transverse displacement within the bunch. For reference it has a resolution of 100\,ps while the length of the bunches is $4\sigma_t \sim $2\,ns~\cite{Carver:2696108}.  This makes it ideal for the measurement of the intra-bunch offset caused from the $\CC$ kick. Its reading consists of the sum ($\Sigma$) and the  difference ($\Delta$) of the electrode signals of a straight stripline coupler (Fig.~\ref{fig:SPS_HT_diagram})~\cite{Jones:987561, Levens:2313358} over a defined acquisition period. The sum signal is the longitudinal line density while the difference signal corresponds to the intra-bunch offset. The system operates on timescales such that the signals are given as a function of the position within the bunch. The center of the bunch as it passes through the Head-Tail monitor defines the $t=0$. 
 
 \begin{figure}[h]% Edit figure in: Goodle Docs/Doctoral/2022/Thesis/Ch4
    \centering         
@@ -76,7 +76,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
 
 
  \subsection{Crab Cavity voltage reconstruction}\label{sec:Vcc_calibration}
- This section discusses the reconstruction of the $\CC$ voltage from the HT monitor signal. First, Eq.~\eqref{eq:CC_orbit_shift_Chao} was used to calculate the $\CC$ kick, $\theta$, required to reconstruct the measured intra-bunch offset. Equation~\eqref{eq:CC_orbit_shift_Chao}, which is obtained from Eq.\,(1) from chapter 4.7.1 in Ref.~\cite{Chao:1490001}, gives the vertical orbit shift (in meters) from the $\CC$ kick, $\theta$, at the Head-Tail monitor location as follows:
+ This section discusses the reconstruction of the $\CC$ voltage from the HT monitor signal. First, Eq.~\eqref{eq:CC_orbit_shift_Chao} was used to calculate the $\CC$ kick, $\theta$, required to reconstruct the measured intra-bunch offset. Equation~\eqref{eq:CC_orbit_shift_Chao}, which is obtained from Eq.\,(1) from chapter 4.7.1 in~\cite{Chao:1490001}, gives the vertical orbit shift (in meters) from the $\CC$ kick, $\theta$, at the Head-Tail monitor location as follows:
 
 \begin{equation}\label{eq:CC_orbit_shift_Chao}
    \Delta y_{,HT} = \frac{\sqrt{\beta_{y, HT}}}{2 \sin(\pi \Qy)} \theta \sqrt{\beta_{y, CC}} \cos(\pi \Qy - \mid \psi_{y, HT} - \psi_{y, CC} \mid),
@@ -84,7 +84,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
 
 where $\beta_y$ is the beta function, $\Qy$ is the tune, and $\mid \psi_{y, HT} - \psi_{y, CC} \mid$ is the vertical phase advance (in radians) between the $\CC$ and the Head-Tail monitor. The same applies for the horizontal plane. The subscripts Head-Tail and CC indicate quanities at the location of the Head-Tail monitor and CC respectively.
 
-The $\CC$ voltage is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the HT monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
+The $\CC$ voltage experienced by the beam is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the Head-Tail monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
 
 % 1. locally PhD_projects/CC_MD_2021_summary/HT_monitor/2018_HT_monitor/MD2_phase_scan
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
@@ -121,16 +121,18 @@ It should be noted here, that the measured intra-bunch offset, $\Delta y_{, HT}$
    \end{minipage}
 \end{table}
 
-\subsection{Demonstration of crabbing with proton beams}\label{subsec:crabbing_demonstration_density_plot}
-Additionally, the measurements from the Head-Tail monitor were used for reconstructing the crabbing and representating schematically the beam projection in the transverse plane. The technique for reconstructing the crabbing was developed at CERN in 2018 and was extensively used throughout the experimental campaign with $\CC$s since (together with the calibrated voltage) it gives a straightforward estimate of the applied $\CC$ kick, as illustrated in Fig.~\ref{fig:crabbing_reconstruction_HT_monitor}. 
+%\subsection{Demonstration of crabbing with proton beams}\label{subsec:crabbing_demonstration_density_plot}
+%Additionally, the measurements from the Head-Tail monitor were for representating schematically the beam projection in the transverse plane. The technique descibed here was developed at CERN in 2018 and was extensively used throughout the experimental campaign with $\CC$s since (together with the calibrated voltage) it gives a direct visualisation of the applied $\CC$ kick, as illustrated in Fig.~\ref{fig:crabbing_reconstruction_HT_monitor}. 
 
-To obtain this schematic representation, which in practice is a density plot showing the effect of the $\CC$ kick on the beam, one needs to multiply the measured longitudinal profile (the mean of the sum signals acquired after phase synchronisation) with the measured intra-bunch offset, mean of the difference signals acquired after the synchronisation. An example of this is shown in Fig.~\ref{fig:HT_baseline_correction_crabbing_mm}. For the transverse plane a gaussian distribution is considered with $\sigma$ obtained from the wire scanner (addressed in more detail in the Section~\ref{subsec:sps_ws}). The color code of Fig.~\ref{fig:crabbing_reconstruction_HT_monitor} is normalised to the maximum intensity within the bunch.
+%This schematic representation is a density plot showing the effect of the $\CC$ kick on the beam and is constructed as follows. A grid of values in $y$ and $z$. Then for each point an intensity value is given such as they represent a Gaussian distribution of the y values.. The sigma of the Gaussian was chosen arbitrary at 2.2mm. (was in the script). And then the vertical co-oridnate $y$ is modified according to the orbit shift from the crab cavity.
+%The color code of Fig.~\ref{fig:crabbing_reconstruction_HT_monitor} is normalised to the maximum intensity within the bunch.
+%The sigms is obtained from the WS.
 
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
-\begin{figure}[!h]
-   \centering         
-   \includegraphics[width=0.7\textwidth]{images/Ch4/HT_crabVoltage__20180530_135105_crabbing_only_CC_post_processing.png}
-       \caption{Demonstration of the crabbing from the Head-Tail monitor signal. CC voltage and sum signal (longitudinal line density) measured from the Head-Tail monitor (top) together with the density plot (bottom) which visualises the effect of the CC kick on the beam.}
-       \label{fig:crabbing_reconstruction_HT_monitor}
-\end{figure}
+%\begin{figure}[!h]
+%   \centering         
+%   \includegraphics[width=0.7\textwidth]{images/Ch4/HT_crabVoltage__20180530_135105_crabbing_only_CC_post_processing.png}
+%       \caption{Demonstration of the crabbing from the Head-Tail monitor signal. CC voltage and sum signal (longitudinal line density) measured from the Head-Tail monitor (top) together with the density plot (bottom) which visualises the effect of the CC kick on the beam.}
+%       \label{fig:crabbing_reconstruction_HT_monitor}
+%\end{figure}
    
