--- a/symbols.tex
+++ b/symbols.tex
@@ -72,3 +72,4 @@
 \nomenclature[72]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
 \nomenclature[73]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
 \nomenclature[74]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
+\nomenclature[75]{$E_b$}{Beam energy.} 
