--- a/references.bib
+++ b/references.bib
@@ -1338,6 +1338,19 @@ url = {https://www.sciencedirect.com/science/article/pii/001910359090084M},
 author = {J. Laskar},
 }
 
+@article{Stoel:2693915,
+      author        = "Stoel, Linda and Bartosik, Hannes and Benedikt, Michael
+                       and Fraser, Matthew and Goddard, Brennan and Kain, Verena
+                       and Velotti, Francesco",
+      title         = "{Slow extraction loss reduction with octupoles at the CERN
+                       SPS}",
+      reportNumber  = "CERN-ACC-2019-197",
+      pages         = "WEPMP033. 4 p",
+      year          = "2019",
+      url           = "http://cds.cern.ch/record/2693915",
+      doi           = "10.18429/JACoW-IPAC2019-WEPMP033",
+}
+
 @article{Kostoglou:2289645,
       author        = "Kostoglou, Sofia and Karastathis, Nikolaos and
                        Papaphilippou, Yannis and Pellegrini, Dario and Zisopoulos,
