--- a/references.bib
+++ b/references.bib
@@ -1338,6 +1338,18 @@ url = {https://www.sciencedirect.com/science/article/pii/001910359090084M},
 author = {J. Laskar},
 }
 
+@techreport{Gareyte:321824,
+      author        = "Gareyte, Jacques and Koutchouk, Jean-Pierre and Ruggiero,
+                       F",
+      title         = "{Landau damping dynamic aperture and octupole in LHC}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "LHC-Project-Report-91, CERN-LHC-Project-Report-91",
+      year          = "1997",
+      url           = "https://cds.cern.ch/record/321824",
+      note          = "revised version number 1 submitted on 2003-08-21 14:12:02",
+}
+
 @article{Stoel:2693915,
       author        = "Stoel, Linda and Bartosik, Hannes and Benedikt, Michael
                        and Fraser, Matthew and Goddard, Brennan and Kain, Verena
