--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -1,19 +1,19 @@
-The SPS is equipped with a high bandwidth pick-up of approximately 2\,GHz allowing to resolve the intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Therefore its use as a crabbing diagnostic should be explained here. The methods and procedures described in this section were developed at CERN and they are described here for the completeness of the thesis.
+The SPS is equipped with a pick-up of approximately 2\,GHz bandwidth allowing to resolve intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Its use as a crabbing diagnostic shall be explained here. The methods and procedures described in this section were developed at CERN and are described here for completeness.
 
-In the first part of this section some general information on the instrument along with example signals will be presented. Subsequently, the post processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset infuced by the CC kick. The experimental data presented in this section were acquired, on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that the particle at the center of the bunch doesn't recieve any transverse deflection) for simplicity. That energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
+In the first part of this section some general information on the instrument along with example signals will be presented. Subsequently, the post processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset induced by the CC kick. The experimental data presented in this section were acquired on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that a particle at the center of the bunch doesn't recieve any transverse deflection). The energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
 
 \section{General information}\label{subsec:HT_general_info}
-As already mentioned, the Head-Tail monitor~\cite{sps_headtail_monitor} is a high bandwidth version of a standard beam position monitor, which means that it can measure the transverse displacement within the bunch. For reference it has a resolution of 100\,ps while the length of the bunches is $4\sigma_t \sim $2\,ns~\cite{Carver:2696108}.  This makes it ideal for the measurement of the intra-bunch offset caused from the $\CC$ kick. Its reading consists of the sum ($\Sigma$) and the  difference ($\Delta$) of the electrode signals of a straight stripline coupler (Fig.~\ref{fig:SPS_HT_diagram})~\cite{Jones:987561, Levens:2313358} over a defined acquisition period. The sum signal is the longitudinal line density while the difference signal corresponds to the intra-bunch offset. The system operates on timescales such that the signals are given as a function of the position within the bunch. The center of the bunch as it passes through the Head-Tail monitor defines the $t=0$. 
+The Head-Tail monitor~\cite{sps_headtail_monitor} is a high bandwidth beam position monitor that can measure the transverse displacement within the bunch. It has a resolution of 100\,ps while the length of the bunches is $4\sigma_t \sim $2\,ns~\cite{Carver:2696108}.  This makes it ideal for the measurement of the intra-bunch offset caused from the $\CC$ kick. Its reading consists of the sum ($\Sigma$) and the difference ($\Delta$) of the electrode signals of a straight stripline coupler (Fig.~\ref{fig:SPS_HT_diagram})~\cite{Jones:987561, Levens:2313358} over a defined acquisition period. The sum signal is the longitudinal line density while the difference signal divided by the sum signal corresponds to the intra-bunch offset. The system operates on timescales such that the signals are given as a function of the position within the bunch. The center of the bunch as it passes through the Head-Tail monitor defines $t=0$. 
 
 \begin{figure}[h]% Edit figure in: Goodle Docs/Doctoral/2022/Thesis/Ch4
    \centering         
    \includegraphics[width=1.0\textwidth]{images/Ch4/HT_monitor_sketch.png}
-       \caption{Diagram of the SPS Head-Tail monitor~\cite{Levens:2313358}. The beam is passing through a straight stripline coupler which is followed by a 180$^\circ$hybrid. This configuration provides the sum ($\Sigma$) and the difference ($\Delta$) signal of the two electrodes.} %, which correspond to the longitudinal line density and intra-bunch offset, respectively.} 
+       \caption{Diagram of the SPS Head-Tail monitor~\cite{Levens:2313358}. The beam is passing through a straight stripline coupler which is followed by a 180$^\circ$ hybrid. This configuration provides the sum ($\Sigma$) and the difference ($\Delta$) signal of the two electrodes.} %, which correspond to the longitudinal line density and intra-bunch offset, respectively.} 
        \label{fig:SPS_HT_diagram}
 \end{figure}
 % what is a 180 hybrid. A 180° Hybrid Coupler is a four port device that is used either to equally split an input signal with a 180° phase shift between the ports or to combine two signals that are 180° apart in phase. (from google)
 
-The raw signals from the Head-Tail monitor require a specific post-processing procedure~\cite{Levens:2313358}, in order to provide useful information. Figure~\ref{fig:HT_example_signals} shows some example signals obtained from the Head-Tail monitor after the basic post-processing is applied. Moreover, Fig.~\ref{fig:HT_example_signals_2D} shows a 2D representation of the Head-Tail monitor reading. It is worth noting here that in the specific example a clear modulating pattern in time of the vertical intra-bunch offset (vertical $\Delta$) signal is observed. This is a result of the phase slip between the $\CC$ and the main RF system because they are not yet synchronised. 
+The raw signals from the Head-Tail monitor require a specific post-processing procedure~\cite{Levens:2313358}, in order to provide useful information. Figure~\ref{fig:HT_example_signals} shows some example signals obtained from the Head-Tail monitor after the basic post-processing is applied. Moreover, Fig.~\ref{fig:HT_example_signals_2D} shows a 2D representation of the Head-Tail monitor reading. It is worth noting here that in the specific example a clear modulating pattern in time of the vertical intra-bunch offset signal is observed. This is a result of the phase slip between the $\CC$ and the main RF system because they are not yet synchronised during this specific measurement. 
 % COMMENT: The Ref.~\cite{Levens:2313358} refers to the LHC HT monitor but the same applies for SPS as it is the same device.
 
 \begin{figure}[!h]
@@ -76,7 +76,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
 
 
  \subsection{Crab Cavity voltage reconstruction}\label{sec:Vcc_calibration}
- This section discusses the reconstruction of the $\CC$ voltage from the HT monitor signal. First, Eq.~\eqref{eq:CC_orbit_shift_Chao} was used to calculate the $\CC$ kick, $\theta$, required to reconstruct the measured intra-bunch offset. Equation~\eqref{eq:CC_orbit_shift_Chao}, which is obtained from Eq.\,(1) from chapter 4.7.1 in~\cite{Chao:1490001}, gives the vertical orbit shift (in meters) from the $\CC$ kick, $\theta$, at the Head-Tail monitor location as follows:
+ This section discusses the reconstruction of the $\CC$ voltage from the HT monitor signal. First, Eq.~\eqref{eq:CC_orbit_shift_Chao} was used to calculate the $\CC$ kick, $\theta$, required to reconstruct the measured intra-bunch offset. Equation~\eqref{eq:CC_orbit_shift_Chao}, which is obtained from Eq.\,(1) from chapter 4.7.1 in~\cite{Chao:1490001}, gives the vertical orbit shift from the $\CC$ kick, $\theta$, at the Head-Tail monitor location as follows:
 
 \begin{equation}\label{eq:CC_orbit_shift_Chao}
    \Delta y_{,HT} = \frac{\sqrt{\beta_{y, HT}}}{2 \sin(\pi \Qy)} \theta \sqrt{\beta_{y, CC}} \cos(\pi \Qy - \mid \psi_{y, HT} - \psi_{y, CC} \mid),
