--- a/references.bib
+++ b/references.bib
@@ -1338,6 +1338,26 @@ url = {https://www.sciencedirect.com/science/article/pii/001910359090084M},
 author = {J. Laskar},
 }
 
+@article{Tecker:2674860,
+      author        = "Tecker, Frank",
+      title         = "{Longitudinal Beam Dynamics - Recap}",
+      journal       = "CERN Yellow Rep. School Proc.",
+      archivePrefix = "arXiv",
+      eprint        = "2004.11908",
+      volume        = "5",
+      pages         = "31. 16 p",
+      month         = "Dec",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2674860",
+      note          = "17 pages, contribution to the CAS - CERN Accelerator
+                       School: Beam
+  Instrumentation, 2-15 June 2018, Tuusula,
+                       Finland. arXiv admin note:
+  substantial text overlap with
+                       arXiv:1601.04901",
+      doi           = "10.23730/CYRSP-2018-005.31",
+}
+
 @techreport{Gareyte:321824,
       author        = "Gareyte, Jacques and Koutchouk, Jean-Pierre and Ruggiero,
                        F",
