--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -13,15 +13,16 @@ One can switch between these two representations using the Fourier transform met
 \fourierxform{y}(f) = \int_{-\infty}^{\infty} y(t) e^{-2\pi \imagunit t f} dt,
 \end{equation}
 where $f$ stands for any real number. 
-If the time is measured in seconds the frequency, $f$, is measured in hertz. 
+If the time is measured in seconds the frequency, $f$, is measured in Hertz. 
 
-The inverse Fourier transform, which is used to re-create the signal from its spectrum, is defined as:
+The inverse Fourier transform, which is used to re-create the signal from its spectrum, is defined as~\cite{a_numerical_recipies}:
 \begin{equation}\label{eq:ifft_definition}
 y(t) = \int_{-\infty}^{\infty} \fourierxform{y}(f) e^{2\pi \imagunit t f} df.
 \end{equation}
 
 \subsubsection*{Power spectral density and total power} %\hfill \break
-The power spectral density, $S_{yy}(f)$, of a signal (or a time series), $y(t)$, will be used extensively in this thesis: it describes the distribution of the power in a signal between its frequency components, and is defined as the Fourier transform of the autocorrelation function, $R_{yy}(t)$~\cite{b_papoulis1991probability}: % Eq.10-14 p. 338
+The power spectral density (PSD), $S_{yy}(f)$, of a signal (or a time series), $y(t)$ it describes the distribution of the power in a signal between its frequency components, and is defined as the Fourier transform of the autocorrelation function, $R_{yy}(t)$~\cite{b_papoulis1991probability}: % Eq.10-14 p. 338
+%"Autocorrelation" is used to compare a signal with a time-delayed version of itself. If a signal is periodic, then the signal will be perfectly correlated with a version of itself if the time-delay is an integer number of periods.
 
 \begin{equation}\label{eq:Sxx_definition}
     S_{yy}(f) = \fourierxform{R}_{yy}(f) =  \int_{-\infty}^{\infty} R_{yy}(\tau)e^{-2\pi \imagunit \tau f} d\tau.
@@ -50,8 +51,9 @@ with  $f \in \left(-\infty, +\infty \right )$.
 
 \subsubsection*{Discrete-time signals} %\hfill \break
 % the following paragraph is from here: https://sceweb.sce.uhcl.edu/harman/ceng5431/2015WEB/Chap11tlhDFT.pdf
-Figure~\ref{fig:sampling_of_continuous_signal} shows a part of a continuous signal $y(t)$. As already mentioned, for the measurements and the computational analysis, signals (or time series) sampled at a finite number of points are considered. Such signals are called discrete-time signals and in most cases they are sampled at equal points in time. For example, in Figure~\ref{fig:sampling_of_continuous_signal}, it is assumed that the continuous signal, $y(t)$, is sampled at intervals $\Delta t$ creating a set of $N$ points. The length in time between the first and final sample is $T_\mathrm{sample}=\frac{N-1}{N}T$, where $T = N\Delta t$. %One can see that the continuous signal is not only sampled but also truncated.
+Figure~\ref{fig:sampling_of_continuous_signal} shows a part of a continuous signal $y(t)$. For signal measurements and computational analysis, signals (or time series) sampled at a finite number of points are considered. Such signals are called discrete-time signals and typically they are sampled at equal points in time. For example, in Figure~\ref{fig:sampling_of_continuous_signal}, it is assumed that the continuous signal, $y(t)$, is sampled at intervals $\Delta t$ creating a set of $N$ points. The length in time between the first and final sample is $T_\mathrm{total} = N\Delta t$.
 
+%$T_\mathrm{sample}=\frac{N-1}{N}T$, where $T = N\Delta t$. %One can see that the continuous signal is not only sampled but also truncated.
 
 \begin{figure}[!ht]
      \centering         
@@ -61,23 +63,34 @@ Figure~\ref{fig:sampling_of_continuous_signal} shows a part of a continuous sign
 \end{figure}
 
 \subsubsection*{Discrete Fourier transform} %\hfill \break %\label{subsec:DFT}
-Let us consider a discrete-time signal, $y_n$ which is sampled at $N$ consecutive samples, $y_n = y(n \Delta t)$, with $n \in \left[0,N-1 \right ]$ such that $\Delta t$ is the sampling interval. For later convenience, we assume that $N$ is an odd integer. As a first step, we note that the integral of Eq.~(\ref{eq:fft_definition}) can be represented by a discrete sum in the limit that $\Delta t \to 0$:
-\begin{equation}\label{eq:dft_proof}
-\fourierxform{y}(f) = \int_{-\infty}^{\infty} y(t) e^{-2\pi \imagunit f t} dt =
-\lim_{\Delta t \to 0}
-\sum_{n=-\infty}^\infty y(n\Delta t) e^{-2\pi \imagunit f n \Delta t} \Delta t.
-%= \Delta t \sum_{n=0}^{N-1} y(n\Delta t) e^{\frac{-j 2\pi k n}{N}},
+Let us consider a discrete-time signal, $y_n$, which is sampled at $N$ consecutive samples, $y_n = y(n \Delta t)$, with $n \in \left[0,N-1 \right ]$ such that $\Delta t$ is the sampling interval. The following discussion considers that $N$ is an odd integer. The Fourier transform for a discrete time signal, also known as discrete Fourier transform, is given by~\cite{a_numerical_recipies}:%Chapter 12, Eq.(12.1.7)
+% Link to reference: https://faculty.washington.edu/seattle/brain-physics/FFT/numerical-recipes.pdf
+% Also check the abover eference for aliasing p.500 and 501
+\begin{equation}\label{eq:DFT_definiton}
+    \fourierxform{y}_k= \sum_{n=0}^{N-1} y(n\Delta t) e^{-2\pi \imagunit \frac{k n}{N}},
 \end{equation}
+where the index $k$ is an integer in the range $-\frac{N-1}{2}$ to $\frac{N-1}{2}$.
+
+
+%As a first step, we note that the integral of Eq.~(\ref{eq:fft_definition}) can be represented by a discrete sum in the limit that $\Delta t \to 0$:
+%\begin{equation}\label{eq:dft_proof}
+%\fourierxform{y}(f) = \int_{-\infty}^{\infty} y(t) e^{-2\pi \imagunit f t} dt =
+%\lim_{\Delta t \to 0}
+%\sum_{n=-\infty}^\infty y(n\Delta t) e^{-2\pi \imagunit f n \Delta t} \Delta t.
+%= \Delta t \sum_{n=0}^{N-1} y(n\Delta t) e^{\frac{-j 2\pi k n}{N}},
+%\end{equation}
 %where $f_k=k/(N\Delta t)$ and $k \in \left[-\frac{N-1}{2},+\frac{N-1}{2} \right ]$ (for odd $N$) or  $k \in \left[-\frac{N}{2},+\frac{N}{2} \right ]$ (for even $N$), and $k$ being an integer.
 
-Based on the expression for the summation in Eq.~(\ref{eq:dft_proof}), we define the discrete Fourier transform as follows:
-\begin{equation}\label{eq:DFT_definiton}
-\fourierxform{y}_k= \sum_{n=0}^{N-1} y(n\Delta t) e^{-2\pi \imagunit \frac{k n}{N}}.
-\end{equation}
-Here, the index $k$ is an integer in the range $-\frac{N-1}{2}$ to $\frac{N-1}{2}$.
-Each component $\fourierxform{y}_k$ of the discrete Fourier transform is related to the component $\fourierxform{y}(f)$ of the continuous Fourier transform of $y(t)$, for $f = k/T$, in the limit $\Delta t \to 0$ and $N \to \infty$ (and where it is assumed that $y(t) = 0$ for $t < 0$ and for $t > T$).
+%Based on the expression for the summation in Eq.~(\ref{eq:dft_proof}), we define the discrete Fourier transform as follows~\cite{a_numerical_recipies}: % Chapter 12, Eq.(12.10)
+%\begin{equation}\label{eq:DFT_definiton}
+%\fourierxform{y}_k= \sum_{n=0}^{N-1} y(n\Delta t) e^{-2\pi \imagunit \frac{k n}{N}}.
+%\end{equation}
+%Here, the index $k$ is an integer in the range $-\frac{N-1}{2}$ to $\frac{N-1}{2}$.
+%Each component $\fourierxform{y}_k$ of the discrete Fourier transform is related to the component $\fourierxform{y}(f)$ of the continuous Fourier transform of $y(t)$, for $f = k/T$, in the limit $\Delta t \to 0$ and $N \to \infty$ (and where it is assumed that $y(t) = 0$ for $t < 0$ and for $t > T$).
 
-It should be noted that the discrete Fourier transform is calculated only at integer values of $k$, and therefore for $N$ samples the discrete Fourier transform will consist of $N$ numbers. The components of the discrete Fourier transform are calculated at frequencies $f_k$ that are integer multiples of $\Delta f = 1/T = f_s/N$, with $f_s = 1/\Delta t$ the sampling frequency. In that case, $f_k \in \left[-\frac{N-1}{2T},\frac{N-1}{2T} \right]$. An example of a discrete Fourier transform is shown in Fig.~\ref{fig:signal_and_DFT_example}.
+%It should be noted that the discrete Fourier transform is calculated only at integer values of $k$, and therefore for $N$ samples the discrete Fourier transform will consist of $N$ numbers. 
+
+The components of the discrete Fourier transform are calculated at frequencies $f_k$ that are integer multiples of $\Delta f = 1/T_\mathrm{total} = f_s/N$, with $f_s = 1/\Delta t$ the sampling frequency. In that case, $f_k \in \left[-\frac{N-1}{2T_\mathrm{total}},\frac{N-1}{2T_\mathrm{total}} \right]$. An example of a discrete Fourier transform is shown in Fig.~\ref{fig:signal_and_DFT_example}.
 %/Delta_f is the resolution frequency
 \begin{figure}[!ht]
     \centering
@@ -99,6 +112,10 @@ It should be noted that the discrete Fourier transform is calculated only at int
      \label{fig:signal_and_DFT_example}
 \end{figure}
 
+When using this convension the Fourier tranfrom components outisde of the above mentioned frequency range are considered zero. Note that the zero frequency, $f_k=0$, corresponds to $n=0$. The positive frequencies, $0  < f_k < + \frac{N-1}{2T_\mathrm{total}}$ correspond to values $1 < n < (N-1)/2$ and the negative frequencies,  $-\frac{N-1}{2T_\mathrm{total}}  < f_k < 0$ correspond to values $(N-1)/2 < f_k < 0$. The value n = $(N-1)/2$ corresponds to both $f_k = - \frac{N-1}{2T_\mathrm{total}}$ and + $\frac{N-1}{2T_\mathrm{total}}$
+
+% p.503 in the following link: https://faculty.washington.edu/seattle/brain-physics/FFT/numerical-recipes.pdf
+
 The inverse discrete Fourier transform is defined as:
 \begin{equation}\label{eq:iDFT_definiton}
  y_n =  y(n\Delta t) = \frac{1}{N} \sum_{k=-\frac{N-1}{2}}^{\frac{N-1}{2}} \fourierxform{y}_k e^{2\pi \imagunit \frac{k n}{N}},
@@ -111,13 +128,14 @@ The definitions given in Eq.~(\ref{eq:DFT_definiton}) and Eq.~(\ref{eq:iDFT_defi
 Following Eq.~(\ref{eq:Sxx_definition_v2}) the power spectral density of a discrete-time signal should be estimated as follows:
 
 \begin{equation}\label{eq:Sxx_definition_discrete_not_normalised}
-    S_{yy}(f_k) = A \mid \fourierxform{y}_k(f_k) \mid ^2,
+    S_{yy}(f_k) = C_\mathrm{PSD} \mid \fourierxform{y}_k(f_k) \mid ^2,
 \end{equation}
-where $f_k \in \left[-\frac{N-1}{2T},\frac{N-1}{2T} \right]$. $A$ is a normalisation constant which is introduced in order to obtain the correct amplitudes at each frequency and thus the correct noise power. There are several different conventions for the choice of this normalization. In this thesis, the following normalization is considered (see more details in the dedicated paragraph at the end of this section):
+where $f_k \in \left[-\frac{N-1}{2T_\mathrm{total}},\frac{N-1}{2T_\mathrm{total}} \right]$. $C_\mathrm{PSD}$ is a normalisation constant which is introduced in order to obtain the correct amplitudes at each frequency and thus the correct noise power. There are several different conventions for the choice of this normalization. In this thesis, the following normalization is considered (more details in the following paragraph):
+% I choose this normalisation as it gave the correct results in terms of noise power.
 \begin{equation}\label{eq:Sxx_definition_discrete_normalized}
     S_{yy}(f_k) = \frac{1}{N^2 \Delta f} \mid \fourierxform{y}_k(f_k) \mid ^2,
 \end{equation}
-where  $\Delta f = 1/T$ the frequency resolution and $N$ the number of samples.
+where  $\Delta f = 1/T_\mathrm{total}$ the frequency resolution and $N$ the number of samples.
     
 \begin{figure}[!ht]
     \centering         
@@ -126,38 +144,39 @@ where  $\Delta f = 1/T$ the frequency resolution and $N$ the number of samples.
         \label{fig:psd_example_two_sided}
 \end{figure}
 
-Figure~\ref{fig:psd_example_two_sided} shows an example power spectrum of the time-domain signal shown in Fig.~\ref{fig:signal_and_DFT_example}a. It can be seen that the spectrum that results from the analysis above is two-sided, which means that it has both positive and negative frequencies. It is also symmetric around the DC component ($f = $0\,Hz), which is actually a property of a real signal. 
+Figure~\ref{fig:psd_example_two_sided} shows an example power spectrum of the time-domain signal shown in Fig.~\ref{fig:signal_and_DFT_example}a. It can be seen that the spectrum that results from the analysis above is two-sided, which means that it has both positive and negative frequencies. It is also symmetric around the DC component ($f = $0\,Hz), which is a property of a real signal. 
 
 The power spectral density is expressed in terms of the square of the amplitude of the signal per unit frequency. For example, for a signal defined in units of voltage, V, (e.g. from an oscillator) the units are $\mathrm{V^2/Hz}$.
 
-\subsubsection*{Conversion of a two-sided power spectrum to a single-sided power spectrum} %\hfill \break
+%\subsubsection*{Conversion of a two-sided power spectrum to a single-sided power spectrum} %\hfill \break
 % From https://www.sjsu.edu/people/burford.furman/docs/me120/FFT_tutorial_NI.pdf. Rephrase
-As already mentioned, the frequency spectrum of a real signal is symmetric around the DC component and therefore the information contained in the negative frequency is redundant. For this reason, most of the instruments used in experiments to display a frequency analysis show just the positive part of the spectrum (single-sided spectrum).  
+%As already mentioned, the frequency spectrum of a real signal is symmetric around the DC component and therefore the information contained in the negative frequency is redundant. For this reason, most of the instruments used in experiments to display a frequency analysis show just the positive part of the spectrum (single-sided spectrum).  
 
-In order to convert from a two-sided spectrum to a single-sided spectrum, the negative part of the spectrum is discarded, and the amplitudes of the positive frequency components (excluding the DC component, so for $f > 0$) are multiplied by a factor 2:
-\begin{equation}\label{eq:two-sided_2_single-sided}
-        G_{yy}(f_k) = \left\{\begin{matrix}
-  0, & f_k < 0 \\ 
-    S_{yy}(f_k), & f_k=0  \\
-     2 S_{yy}(f_k), & f_k > 0 
-    \end{matrix}\right.
-\end{equation}
-where $S_{yy}(f_k)$ is the two-sided spectrum and $G_{yy}(f_k)$ the single-sided spectrum. Figure~\ref{fig:psd_example_single_sided} illustrates the single-sided spectrum of the signal shown in Fig.~\ref{fig:signal_and_DFT_example_a}.
+%In order to convert from a two-sided spectrum to a single-sided spectrum, the negative part of the spectrum is discarded, and the amplitudes of the positive frequency components (excluding the DC component, so for $f > 0$) are multiplied by a factor 2:
+%\begin{equation}\label{eq:two-sided_2_single-sided}
+%        G_{yy}(f_k) = \left\{\begin{matrix}
+%  0, & f_k < 0 \\ 
+%    S_{yy}(f_k), & f_k=0  \\
+%     2 S_{yy}(f_k), & f_k > 0 
+%    \end{matrix}\right.
+%\end{equation}
+%where $S_{yy}(f_k)$ is the two-sided spectrum and $G_{yy}(f_k)$ the single-sided spectrum. Figure~\ref{fig:psd_example_single_sided} illustrates the single-sided spectrum of the signal shown in Fig.~\ref{fig:signal_and_DFT_example_a}.
 
-\begin{figure}[!ht]
-    \centering         
-    \includegraphics[width=0.5\textwidth]{./images/app_B/simple_signal_1freq_psd_single_sided_example.png}
-        \caption{Single-sided power spectrum of the signal shown in Fig.~\ref{fig:signal_and_DFT_example}(a).}
-        \label{fig:psd_example_single_sided}
-\end{figure}
+%\begin{figure}[!ht]
+%    \centering         
+%    \includegraphics[width=0.5\textwidth]{./images/app_B/simple_signal_1freq_psd_single_sided_example.png}
+%        \caption{Single-sided power spectrum of the signal shown in Fig.~\ref{fig:signal_and_DFT_example}(a).}
+%        \label{fig:psd_example_single_sided}
+%\end{figure}
 
 \subsubsection*{Normalisation factor for the power spectral density of a discrete-time signal}\label{appendix_dft_normalisation}
-This paragraph, discusses the choice of the normalisation factor $A=1/(N^2 \Delta f)$ for the power spectral density of a discrete-time signal defined in Eq.~\eqref{eq:Sxx_definition_discrete_not_normalised}:
-\begin{equation}
-S_{yy}(f_k) = A \mid \fourierxform{y}_k(f_k) \mid ^2.
-\end{equation}
+This paragraph, discusses the choice of the normalisation factor $C_\mathrm{PSD}=1/(N^2 \Delta f)$ for the power spectral density of a discrete-time signal defined in Eq.~\eqref{eq:Sxx_definition_discrete_not_normalised}.
 
-Consider the example of a discrete-time series $y_n = y(n\Delta t)$ where $n$ is an integer such that $n \in [0, N-1]$. $y_n$ represents a sequence of successive points equally spaced in time, drawn from a normal distribution with known standard deviation $\sigma$ and zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
+The discussion here is limited to noise signals with mean zero. This is justified since this conditions is valid for the noise spectra considered in the thesis. In particular the mean of the white noise spectra used in the simulation studies is zero by definition. The mean of the measured noise signal corresponds to the DC componenet which for the spectra discussed in this thesis was also at 0\,Hz.
+
+Consider the example of a discrete-time series $y_n = y(n\Delta t)$ where $n$ is an integer such that $n \in [0, N-1]$. $y_n$ represents a sequence of successive points equally spaced in time, with zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
+
+%drawn from a normal distribution with known standard deviation $\sigma$ and zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
 \begin{equation}\label{eq:variance}
     \sigma^2 = \frac{1}{N}\sum_{n=0}^{N-1} \left | y_n \right |^2.
 \end{equation}
@@ -198,10 +217,10 @@ Therefore, to satisfy the requirement that the power spectral density for the di
 \end{equation}
 Hence, the normalisation factor in Eq.~\eqref{eq:Sxx_definition_discrete_not_normalised} is chosen to be:
 \begin{equation}
-    A=\frac{1}{N^2 \Delta f}.
+    C_\mathrm{PSD}=\frac{1}{N^2 \Delta f}.
 \end{equation}
 
-\textbf{Discussion}\\
+\textbf{Computation of power spectral density for white noise signals}\\
 At this point it is worth elaborating on the computation of the power spectral density, in the context of the noise effects in a synchrotron that are studied in this thesis.
 
 In Chapter~\ref{Ch:CC_noise_theory} it was discussed that the noise effects are modeled as kicks which update the angle co-ordinates of the particles and which are applied to them once per turn and thus they consist of a discrete-time signal. The power spectral density of that noise signal is given by Eq.~\eqref{eq:autocorrelation_zero_lag_discrete}.  Now, given the fact that in an accelerator the particles receive the noise kicks once per turn, the sampling frequency, $f_s$ equals the revolution frequency of the machine, $\frev$. This means that the frequency resolution, $\Delta f$, can be written as $\Delta f = f_s/N = \frev/N$, where $N$ is the number of samples (or size) in the noise signal. 
@@ -216,71 +235,96 @@ which becomes:
 \end{equation}
 
 
-In other words, the power spectral density at a given frequency, $f_k$, for a white noise spectrum modeled as described above, equals the variance of the noise signal over the revolution frequency of the machine
+In other words, the power spectral density at a given frequency, $f_k$, for a white noise spectrum modeled as described above, equals the variance of the noise signal over the revolution frequencyin the synchrotron.
 
-\section{Measuring amplitude and phase noise}\label{app:Measured_noise}
-Amplitude and phase modulation are two of the main types of noise in the output signal of an oscillator. The instantaneous output voltage of an ideal oscillator can be expressed as:
-\begin{equation}
-    V(t) = V_0 \sin(2\pi f_0 t),
-\end{equation}
-where $V_0$ is the nominal peak voltage amplitude and $f_0$ the nominal frequency. 
+%\section{Measuring amplitude and phase noise}\label{app:Measured_noise}
+%Amplitude and phase modulation are two of the main types of noise in the output signal of an oscillator. The instantaneous output voltage of an ideal oscillator can be expressed as:
+%\begin{equation}
+%    V(t) = V_0 \sin(2\pi f_0 t),
+%\end{equation}
+%where $V_0$ is the nominal peak voltage amplitude and $f_0$ the nominal frequency. 
 
-However, in practice, small inaccuracies will introduce amplitude and phase modulations. These modulations are included in the above signal by adding stochastic processes, represented by $\phi(t)$ and $\epsilon (t)$, as follows:
-\begin{equation}\label{eq:Oscillator_PN_AN}
-    \begin{split}
-    V(t) = &~(V_0+\epsilon(t)) \sin(2\pi f_0 t + \phi(t)), \\
-    = &~\left( 1+\frac{\epsilon(t)}{V_0} \right) V_0 \sin(2\pi f_0 t + \phi(t)), \\ =  &~(1+\alpha(t)) V_0 \sin(2\pi f_0 t + \phi(t)),
-    \end{split}
-\end{equation}
-where $\phi(t)$ is the deviation from the nominal phase $2\pi f_0 t$, $\epsilon(t)$ is the deviation from the nominal amplitude and $\alpha(t)=\epsilon(t)/V_0$ is the normalised amplitude deviation.  An example of a signal with phase and amplitude noise is shown in Fig.~\ref{fig:AN_PN_example}. 
+%However, in practice, small inaccuracies will introduce amplitude and phase modulations. These modulations are included in the above signal by adding stochastic processes, represented by $\phi(t)$ and $\epsilon (t)$, as follows:
+%\begin{equation}\label{eq:Oscillator_PN_AN}
+%    \begin{split}
+ %   V(t) = &~(V_0+\epsilon(t)) \sin(2\pi f_0 t + \phi(t)), \\
+ %   = &~\left( 1+\frac{\epsilon(t)}{V_0} \right) V_0 \sin(2\pi f_0 t + \phi(t)), \\ =  &~(1+\alpha(t)) V_0 \sin(2\pi f_0 t + \phi(t)),
+ %   \end{split}
+%\end{equation}
+%where $\phi(t)$ is the deviation from the nominal phase $2\pi f_0 t$, $\epsilon(t)$ is the deviation from the nominal amplitude and $\alpha(t)=\epsilon(t)/V_0$ is the normalised amplitude deviation.  An example of a signal with phase and amplitude noise is shown in Fig.~\ref{fig:AN_PN_example}. 
 
-\begin{figure}[!ht]
-    \centering
-    \begin{subfigure}[b]{0.45\textwidth}
-        \centering
-        \includegraphics[width=1\textwidth]{./images/app_B/oscillator_example_AN.png}
-        \caption{Amplitude noise}
-        \label{fig:AN_PN_example_a}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.45 \textwidth}
-        \centering
-        \includegraphics[width=1 \textwidth]{./images/app_B/oscillator_example_PN.png}
-        \caption{Phase noise}
-        \label{fig:AN_PN_example_b}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.45\textwidth}
-        \centering
-        \includegraphics[width=1\textwidth]{./images/app_B/oscillator_example_AN_PN.png}
-        \caption{Amplitude and phase noise}
-        \label{fig:AN_PN_example_c}
-    \end{subfigure}
-    \hfill
-    \caption{Instantaneous voltage of an oscillator in the presence of (a) amplitude noise, (b) phase noise, and (c) both amplitude and phase noise.}
-    \label{fig:AN_PN_example}
-\end{figure}
+%\begin{figure}[!ht]
+%    \centering
+%    \begin{subfigure}[b]{0.45\textwidth}
+%        \centering
+%        \includegraphics[width=1\textwidth]{./images/app_B/oscillator_example_AN.png}
+%        \caption{Amplitude noise}
+%        \label{fig:AN_PN_example_a}
+ %   \end{subfigure}
+ %   \hfill
+ %   \begin{subfigure}[b]{0.45 \textwidth}
+ %       \centering
+ %       \includegraphics[width=1 \textwidth]{./images/app_B/oscillator_example_PN.png}
+ %       \caption{Phase noise}
+ %       \label{fig:AN_PN_example_b}
+ %   \end{subfigure}
+ %   \hfill
+ %   \begin{subfigure}[b]{0.45\textwidth}
+ %       \centering
+ %       \includegraphics[width=1\textwidth]{./images/app_B/oscillator_example_AN_PN.png}
+ %       \caption{Amplitude and phase noise}
+ %       \label{fig:AN_PN_example_c}
+ %   \end{subfigure}
+ %   \hfill
+ %   \caption{Instantaneous voltage of an oscillator in the presence of (a) amplitude noise, (b) phase noise, and (c) both amplitude and phase noise.}
+%    \label{fig:AN_PN_example}
+%\end{figure}
 
-Following the IEEE~\cite{IEEE:4797525} conventions, the amplitude and phase modulation are measured by one-sided spectral densities, $G_{yy}(f)$. From Eq.~(\ref{eq:Sxx_definition_discrete_normalized}) and Eq.~(\ref{eq:two-sided_2_single-sided}), the amount of amplitude noise can be expressed as:
-\begin{equation}\label{eq:AN_measure}
-    G_\alpha(f_k) = 2 S_a(f_k)=\frac{2}{N^2 \Delta f} \left (  \frac{\mid\fourierxform{\epsilon}(f_k)\mid}{V_0} \right ) ^2=\frac{2}{N^2\Delta f } \mid \fourierxform{\alpha}(f_k) \mid ^2,
-\end{equation}
-and the amount of phase noise can be expressed:
-\begin{equation}\label{eq:PN_measure}
-    G_\phi(f_k) = 2 S_\phi(f_k)=\frac{2}{N^2 \Delta f} \mid \fourierxform{\phi}(f_k) \mid ^2,
-\end{equation}
-where $f_k$ lies in a range of positive frequencies and $\fourierxform{\alpha}(f_k)$ and $\fourierxform{\phi}(f_k)$ are the discrete Fourier transforms of the modulation signals $\alpha(t)$ and $\phi(t)$ respectively. The units of the $G_\alpha(f_k)$ are 1/Hz and the units of $G_\phi(f_k)$ are rad$^2$/Hz.
+%Following the IEEE~\cite{IEEE:4797525} conventions, the amplitude and phase modulation are measured by one-sided spectral densities, $G_{yy}(f)$. From Eq.~(\ref{eq:Sxx_definition_discrete_normalized}) and Eq.~(\ref{eq:two-sided_2_single-sided}), the amount of amplitude noise can be expressed as:
+%\begin{equation}\label{eq:AN_measure}
+%    G_\alpha(f_k) = 2 S_a(f_k)=\frac{2}{N^2 \Delta f} \left (  \frac{\mid\fourierxform{\epsilon}(f_k)\mid}{V_0} \right ) ^2=\frac{2}{N^2\Delta f } \mid \fourierxform{\alpha}(f_k) \mid ^2,
+%\end{equation}
+%and the amount of phase noise can be expressed:
+%\begin{equation}\label{eq:PN_measure}
+%    G_\phi(f_k) = 2 S_\phi(f_k)=\frac{2}{N^2 \Delta f} \mid \fourierxform{\phi}(f_k) \mid ^2,
+%\end{equation}
+%where $f_k$ lies in a range of positive frequencies and $\fourierxform{\alpha}(f_k)$ and $\fourierxform{\phi}(f_k)$ are the discrete Fourier transforms of the modulation signals $\alpha(t)$ and $\phi(t)$ respectively. The units of the $G_\alpha(f_k)$ are 1/Hz and the units of $G_\phi(f_k)$ are rad$^2$/Hz.
 % Initially $G_\alpha(f_k)$ are $V^2$/Hz but changed to 1/Hz (which is also in accordance with the paper of themis and philippe, as it is relative to the V--> unitless) on 29 July 2022.
 
-However, instruments used in experiments do not usually display directly the single-sided spectral density $G_{yy}$. Instead, the quantity $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] is shown, with~\cite{IEEE:4797525}:
-\begin{equation}\label{eq:L_to_G}
-    \mathcal{L}(f_k) = G_{yy}(f_k)/2,
-\end{equation}
-where $f_k$ ranges from 0 over the positive part of the spectrum. It should be emphasised that here $\mathcal{L}$ is two-sided, as defined in~\cite{IEEE:4797525}, though it is considered that the instrument displays only the positive frequencies.
+%However, instruments used in experiments do not usually display directly the single-sided spectral density $G_{yy}$. Instead, the quantity $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] is shown, with~\cite{IEEE:4797525}:
+%\begin{equation}\label{eq:L_to_G}
+%    \mathcal{L}(f_k) = G_{yy}(f_k)/2,
+%\end{equation}
+%where $f_k$ ranges from 0 over the positive part of the spectrum. It should be emphasised that here $\mathcal{L}$ is two-sided, as defined in~\cite{IEEE:4797525}, though it is considered that the instrument displays only the positive frequencies.
 
 \section{Applying a measured noise spectrum in numerical simulations}\label{sec:measured_spectra_to_time_series}
-The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series that can be used for numerical simulations. 
+
+
+The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series in numerical simulations. 
+
+The discrete time series are representated here by $\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ for amplitude and phase noise, respectively, where  $n \in \left [1, N_\mathrm{turns}-1 \right ]$ and $N_\mathrm{turns}$ is the number of turns in the simulation. Since, as discussed in Chapter~\ref{Ch:investigating_discrepancy}, in the simulations the beam encounters the phase or amplitude noise kicks once per turn, the sampling frequency of the noise spectra $f_s$ equals the revolution frequency. For, the SPS $f_s=\frev=43/73$ \,kHz. Hence, the sampling interval should be $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$.  
+
+
+%, representated by 
+%$\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ for amplitude and phase noise respectively, that can be applied in the numerical simulations, following Eqs.~\eqref{eq:amplitude_noise_kick},~\eqref{eq:phase_noise_kick} and~\eqref{eq:CC_kick_sixtracklib_vertical_noise}. To apply the mesaured noise spectra in the simulations, the parameters $\Delta A_j$ and $\Delta \phi_j$ introduced in the above equations will correspond to the $j^\mathrm{th}$ element of the $\alpha_n$ and $\phi_n$, respectively.
+
+%The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series, representated by 
+%$\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ for amplitude and phase noise respectively, that can be applied in the numerical simulations, following Eqs.~\eqref{eq:amplitude_noise_kick},~\eqref{eq:phase_noise_kick} and~\eqref{eq:CC_kick_sixtracklib_vertical_noise}. To apply the mesaured noise spectra in the simulations, the parameters $\Delta A_j$ and $\Delta \phi_j$ introduced in the above equations will correspond to the $j^\mathrm{th}$ element of the $\alpha_n$ and $\phi_n$, respectively.
+
+
+%For the correct implementation in numerical simulations, $n \in \left [1, N_\mathrm{turns}-1 \right ]$ and $N_\mathrm{turns}$ is the number of simulated turns. Furthermore, in the simulations the beam enounters the phase or amplitude noise kicks once per turn. This means that the sampling frequency, $f_s=\frev$ which for the SPS is 43.47\,kHz. Hence, the sampling interval should be $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$. 
+
+
+%The dicrete time series for amplitude and phase noise are representated by $\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ respectively.
+
+%, as shown in Eqs.~\eqref{eq:amplitude_noise_kick},~\eqref{eq:phase_noise_kick} and~\eqref{eq:CC_kick_sixtracklib_vertical_noise}. This time, $\Delta A_j$ and/or $\Delta \phi_j$ were not drawn from a Gaussian distribution of size equal the number of simulation turns, $N_\mathrm{turns}$, with zero mean and a given standard deviation as for the case of white noise.
+
+
 %%%%%%%%%%
+
+
+
+
 \subsection{Crab cavity noise in numerical simulations}
 As follows from the discussion in section~\ref{subsec:Measured_noise}, phase and amplitude noise can be represented by discrete time series $\phi_n = \phi(n\Delta t)$ and  $\alpha_n = \alpha(n\Delta t)$ respectively, so that the crab cavity (CC) instantaneous voltage is given by:
 \begin{equation}\label{eq:CC_PN_AN}
