--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
-\chapter{Appendix C}\label{ch:app_C}
+\chapter{Estimating parameters for the SPS Crab Cavity tests}\label{ch:app_C}
 \input{appendix/appendix_c}
 \chapter{SPS Headt-Tail monitor as the main diagonostic for the Crab Cavity studies}\label{ch:app_HT_monitor}
 \input{appendix/appendix_HT_monitor}
